[tool.poetry]
name = "analysis_credit_risk_model"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.0"
black = "24.3.0"
pyprojroot = "0.3.0"
pytest = "8.1.1"
typing-extensions = "4.11.0"
pandas = "1.5.0"
numpy = "1.23.3"
matplotlib = "3.6.0"
seaborn = "0.12.0"
scikit-learn = "1.1.2"
ipython = "8.5.0"
jupyterlab = "^4.2.0"
scipy = "^1.13.0"
lightgbm = "^4.3.0"
shap = "^0.45.1"

[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79